// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://centrumrekodziela.pl"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Centrum
</a>
`;

exports[`changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://centrumrekodziela.pl"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Centrum
</a>
`;

exports[`changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://centrumrekodziela.pl"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Centrum
</a>
`;

exports[`properly escapes quotes 1`] = `
<a
  className="normal"
  href="#"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  "Everythink" \\'is\\ 'awesome'
</a>
`;

exports[`renders as an anchor when no page is set 1`] = `
<a
  className="normal"
  href="#"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`renders correctly 1`] = `
<a
  className="normal"
  href="https://centrumrekodziela.pl"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Centrum
</a>
`;
